--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -7,37 +7,31 @@ body { background-color: whitesmoke; padding: 10px 0 0 0; }
 section { padding: 15px 0 15px 0; margin: 0 auto 25px auto; background-color: white; border: 1px solid #DDD; width: 80%; }
 section:first-child { width: 100%; }
 
+.coming_soon{ opacity: 0.5; cursor: default; position: relative;}
+.coming_soon .alert { 
+  position: absolute; 
+  margin-top: 75px;
+  border: 1px solid #BBB;
+  z-index: 1000;
+  background: white;
+  padding: 20px;
+  opacity: 1;
+  left: 50%;
+  margin-left: -111px;
+}
+.coming_soon .alert h3 { font-size: 35px; }
+
 section h2 { margin: 0 0 5px 0; }
 section h3 { margin: 0 0 5px 0; }
 section h4 { margin: 0 0 5px 0; }
 
-.navbar {
-  width: 100%;
-  text-align: center;
-}
-
-.navbar .navitem {
-  vertical-align: middle;
-  display: inline-block;
-  width: 12%;
-  text-align: center;
-}
-
-.navbar .navitem.brand {
-  width: 25%;
-  font-size: 15px;
-  margin: 0 10px 0 10px;
-}
-
-.navbar .navitem a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.navbar .navitem a:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
+.navbar { width: 100%; text-align: center; }
+.navbar .navitem { vertical-align: middle; display: inline-block; width: 13%; text-align: center; }
+.navbar .navitem.bookend { width: 4%; opacity: 0.6; }
+.navbar .navitem.bookend img { border: 1px solid #AAA; width: 100%; }
+.navbar .navitem.brand { width: 25%; font-size: 15px; margin: 0 10px 0 10px; }
+.navbar .navitem a { color: inherit; text-decoration: none; }
+.navbar .navitem a:hover { text-decoration: underline; cursor: pointer; }
 
 #about .description { width: 80%; margin: 0 auto; }
 /*
@@ -46,24 +40,25 @@ section h4 { margin: 0 0 5px 0; }
 */
 #about #map-canvas { margin: 10px auto 10px auto; width: 300px; height: 300px; }
 
-#portrait img { height: 500px; width: 375px; margin: 0 10px 0 10px; }
+#portrait img { width: 28%; margin: 0 10px 0 10px; }
 #portrait hr { margin: 30px auto; width: 95%; }
 
 #vintages .list { width: 80%; margin: auto; text-align: left; }
 #vintages .list { margin: 15px auto 15px auto; }
 #vintages .list .item { width: 100%; vertical-align: top; margin: 25px 0; }
-#vintages .list .item .photo { width: 13%; height: 100%; display: inline-block; vertical-align: top;}
+#vintages .list .item .photo { width: 13%; min-width: 100px; height: 100%; display: inline-block; vertical-align: top;}
 #vintages .list .item .photo img { height: 175px; }
 #vintages .list .item .blurb { width: 80%; height: 100%; display: inline-block; vertical-align: top;}
 #vintages .list .item .blurb h3 { margin: 0 0 5px 0; }
 #vintages .list .item .blurb h5 { margin: 0; }
 
+#friends .list { margin: 20px 0 0 0; }
 #friends .form { text-align: left; width: 60%; margin: 0 auto 0 auto; }
 #friends .form .field { margin: 10px 0 10px 0; }
 #friends .form .field label { display: block; }
 #friends .form .field input, #log .form .field textarea { display: block; }
 #friends .form input { width: 200px; }
-#friends .form textarea { width: 400px; }
+#friends .form textarea { width: 90%; max-width: 400px; }
 #friends .form input.submit { width: 70px; }
 
 footer {
